Fixes comment textarea bug, shortens link-ui's visibility

--- a/css/style.css
+++ b/css/style.css
@@ -537,14 +537,18 @@ button {
         }
 
             .new-comment__body {
+                display: block;
                 width: 100%;
                 height: 100px;
                 resize: vertical;
-                border: 1px solid #e0d6cd;
+                border-top: 1px solid #e0d6cd;
+                border-bottom: 0px;
+                border-left: 0px;
+                border-right: 0px;
                 background: #FFFDF8;
                 font-size: .8em;
                 color: #222;
-                padding: 20px 80px 20px 80px;
+                padding: 30px 80px 30px 80px;
                 margin: 0px;
             }
 
